--- a/cookie.html
+++ b/cookie.html
@@ -22,7 +22,7 @@
 
 
 		</div>
-		<footer class="col-lg-12 text-center no_padding">  <p>Par Juliette et Thommas TuPeuxPasTest SARL © </p>
+		<footer class="col-lg-12 text-center ">  <p>Par Juliette et Thommas TuPeuxPasTest SARL © </p>
 		</footer>
 	
 
