--- a/cookie.html
+++ b/cookie.html
@@ -12,10 +12,14 @@
 			<h1> Cookie Clicker </h1>
 		</header>
 		<div class="col-lg-12 score">
+
 		</div>
 		<div class="col-lg-12 block_1">
-		<div class="col-lg-4 no_padding"></div>
-		<div class="col-lg-4 cookie no_padding"></div>
+		<div class="col-lg-4 no_padding">
+		</div>
+		<div class="col-lg-4 cookie no_padding">
+			<button class="btn "> Click !</button>
+		</div>
 		<div class="col-lg-4 boutique no_padding"></div>
 
 
