--- a/cookie.html
+++ b/cookie.html
@@ -8,19 +8,21 @@
 	</head>
 	<body>
 	
-		<header class="col-lg-12 text-center no_padding">
+		<header class="col-md-12 text-center no_padding">
 			<h1> Cookie Clicker </h1>
 		</header>
-		<div class="col-lg-12 score">
-
+		<div class="col-md-12 score text-center chat score1" value="0" id="affichage">
+				  </div>
 		</div>
-		<div class="col-lg-12 block_1">
-		<div class="col-lg-4 no_padding">
+		<div class="col-md-12 block_1">
+		<div class="col-md-4 no_padding">
 		</div>
-		<div class="col-lg-4 cookie no_padding">
-			<button class="btn "> Click !</button>
+		<div class="col-md-4 cookie">
+			<img src="elements/cookie.png" class="cookie_img" onclick="" id="bouton" style="cursor:pointer;" />
 		</div>
-		<div class="col-lg-4 boutique no_padding"></div>
+		<div class="col-md-4 boutique no_padding">
+			
+		</div>
 
 
 
@@ -31,7 +33,8 @@
 	
 
 	</body>
-
+<script>
+</script>
 
 
 </html>
