rajout style CSS

--- a/cookie.html
+++ b/cookie.html
@@ -11,9 +11,14 @@
 		<header class="col-md-12 text-center no_padding">
 			<h1> Cookie Clicker </h1>
 		</header>
-		<div class="col-md-12 score text-center chat score1">
+		<div class="col-md-12 fleur">
+		</div>
+		<div class="col-md-12 block_score">
+		<div class="col-md-4"></div>
+		<div class="col-md-4 text-center chat score1">
 			<p> Nombre de Cookies </p>
 			<p id="score"> </p>
+		</div>
 		</div>
 		</div>
 		<div class="col-md-12 block_1">
@@ -26,9 +31,9 @@
 		<button class="bouton" onclick="buymulti()" id="multi">multiplicateur</button>
 			
 		</div>
+		</div>
 
-
-
+		<div class="col-md-12 fleur">
 		</div>
 		<footer class="col-lg-12 text-center ">  <p>Par Juliette et Thommas TuPeuxPasTest SARL © </p>
 		</footer>
