--- a/cookie.html
+++ b/cookie.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="col-md-12 block_score">
 		<div class="col-md-4"></div>
-		<div class="col-md-4 text-center chat score1">
+		<div class="col-md-4 text-center score1">
 			<p> Nombre de Cookies </p>
 			<p id="score"> </p>
 		</div>
