--- a/cookie.html
+++ b/cookie.html
@@ -37,7 +37,7 @@
 
 		<div class="col-md-12 fleur">
 		</div>
-		<footer class="col-lg-12 text-center ">  <p>Par Juliette et Thommas TuPeuxPasTest SARL © </p>
+		<footer class="col-lg-12 text-center ">  <h3>Par Juliette et Thomas TuPeuxPasTest SARL © </h3>
 		</footer>
 	
 
